tests/errors/construction/initializer-only-commas.fn
---
Description: Initializer list containing only commas
Expected: compile error
---

type Vector2
{
    x: f32
    y: f32

    init{}
}

type Program
{
    fn Main -> i32
    {
        var a = Vector2 { , , , }
        return 0
    }
}
